# data-center-telemetry-analyzer-system

./: .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  anomaly_results_gui.csv  docker-compose.yml  telemetry_gui.pro  validation_1970187_results.csv  validation_cli_audit_current_output.txt
data/: sample_telemetry.csv
docs/: course_project_report.md  development_log_ru.md  final_tz_analysis_ru.md  presentation_plan.md
include/telemetry/: CsvParser.hpp  CsvReader.hpp  DataLoader.hpp  DatabaseManager.hpp  GraphBuilder.hpp  HybridDetector.hpp  IForestDetector.hpp  IsolationForestDetector.hpp  KMeansDetector.hpp  MetricsCalculator.hpp  Models.hpp  ParquetConverter.hpp  Preprocessor.hpp  RealFailureValidator.hpp  Summit1970187Adapter.hpp  SummitPrototypeAdapter.hpp  TaskControl.hpp  Visualizer.hpp
include/telemetry/gui/: ExecutionThread.hpp  MainWindow.hpp
scripts/: build_git_bash.sh  build_qt_git_bash.sh  parquet_to_csv.py  plot_telemetry.py
src/: CsvParser.cpp  CsvReader.cpp  DataLoader.cpp  DatabaseManager.cpp  GraphBuilder.cpp  HybridDetector.cpp  IForestDetector.cpp  IsolationForestDetector.cpp  KMeansDetector.cpp  MetricsCalculator.cpp  ParquetConverter.cpp  Preprocessor.cpp  RealFailureValidator.cpp  Summit1970187Adapter.cpp  SummitPrototypeAdapter.cpp  Visualizer.cpp  main.cpp
src/gui/: ExecutionThread.cpp  MainWindow.cpp  main_gui.cpp
